rustdocs/errors/rust-bitcoin-consensus_encoding-src-encode-encoders.rs.txt
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internals`
  --> ../rust-bitcoin/consensus_encoding/src/encode/encoders.rs:14:5
   |
14 | use internals::array_vec::ArrayVec;
   |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
   |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
   |
14 + extern crate internals;
   |

error[E0433]: failed to resolve: there are too many leading `super` keywords
  --> ../rust-bitcoin/consensus_encoding/src/encode/encoders.rs:17:5
   |
17 | use super::{Encodable, Encoder};
   |     ^^^^^ there are too many leading `super` keywords

error[E0432]: unresolved import `internals`
  --> ../rust-bitcoin/consensus_encoding/src/encode/encoders.rs:15:5
   |
15 | use internals::compact_size;
   |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
   |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
   |
14 + extern crate internals;
   |

error[E0220]: associated type `Encoder` not found for `T`
  --> ../rust-bitcoin/consensus_encoding/src/encode/encoders.rs:67:24
   |
67 |     cur_enc: Option<T::Encoder<'e>>,
   |                        ^^^^^^^ associated type `Encoder` not found

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0220, E0432, E0433.
For more information about an error, try `rustc --explain E0220`.
